# homeWorksSQL

./: .gitignore
Lesson_4/task_1/: CMakeLists.txt  main.cpp
lesson_1/: Diagramm_music.drawio
lesson_2/task_1/: sql.md  sql.txt
lesson_2/task_2/: sql.txt
lesson_3/: Script-CREATE_lesson_3.sql
lesson_3/Task_1/: Script-INSERT.sql
lesson_3/Task_2/: SELECT-Task_2.sql
lesson_3/Task_3/: SELECT-Task_3.sql
lesson_3/Task_4/: SELECT_Task_4.sql
lesson_5/Task_2_ORM/: Task_2_ORM.sln  Task_2_ORM.vcxproj  main.cpp
lesson_5/task_1_orm/: task_1_orm.cpp  task_1_orm.sln  task_1_orm.vcxproj  task_1_orm.vcxproj.filters
